--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ h1 {
 
     max-width: 250px;
     width: 100%;
-    min-height: 958px;
 }
 
 .column h2 {
@@ -69,7 +68,25 @@ h1 {
 }
 
 .column ul {
-    list-style-position: inside;
+    list-style: none;
+}
+
+.column ul li {
+    position: relative;
+}
+
+.column ul li::before {
+    content: '';
+    position: absolute;
+    left: -10px;
+    top: 5px;
+
+    width: 6px;
+    height: 6px;
+
+    border-radius: 100%;
+
+    background: black;
 }
 
 .column .list-1 {
@@ -83,7 +100,6 @@ h1 {
 
 .column-operations {
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
 
     max-width: 224px;
