--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h1 {
 
 .column-operations {
     display: flex;
+    flex-direction: column;
     align-items: flex-end;
 
     max-width: 224px;
